# pkg-spatialite-gui

./: BlobExplorer.cpp  Classdef.h  Dialogs.cpp  DialogsGraph.cpp  Exif.cpp  Main.cpp  Makefile-static-Linux  Makefile-static-MacOsX  Makefile-static-MinGW  Makefile.am  Makefile.in  MalformedGeoms.cpp  Network.cpp  Objects.cpp  QueryView.cpp  QueryViewComposer.cpp  README  ResultSetView.cpp  Shapefiles.cpp  TableTree.cpp  TextCsv.cpp  Wfs.cpp  config.h.in  configure  configure.ac  indent_me  spatialite-gui_1.7.1.orig.tar.gz.delta  spatialite-gui_1.7.1.orig.tar.gz.id
debian/: changelog  control  copyright  install  menu  rules  spatialite-gui-dbg.lintian-overrides  spatialite-gui.desktop  spatialite-gui.lintian-overrides  watch
debian/patches/: 00-fix_buildsystem.patch  01-fix_binary_name.patch  02-fix_typos.patch  03-link-sqlite3.patch  series
gnome_resource/: Makefile.am  Makefile.in  spatialite-gui.desktop
icons/: Makefile.am  Makefile.in  about.xpm  attach.xpm  charset.xpm  checkgeom.xpm  composer.xpm  connect.xpm  db.xpm  db_status.xpm  disconnect.xpm  dumpshp.xpm  dxf.xpm  exif.xpm  exit.xpm  foreign_key.xpm  geotable.xpm  geoview.xpm  geovtable.xpm  help.xpm  hs_back.xpm  hs_back_no.xpm  hs_forward.xpm  hs_forward_no.xpm  icon.xpm  icon_info.xpm  index.xpm  kill_spindex.xpm  loaddbf.xpm  loadshp.xpm  loadtxt.xpm  loadxl.xpm  loadxml.xpm  malformed_geoms.xpm  map_preview.xpm  mbrcache.xpm  memdb_clock.xpm  memdb_load.xpm  memdb_new.xpm  memdb_save.xpm  (+27 more)
mac_resource/: Makefile.am  Makefile.in  wxmac.icns
win_resource/: Makefile.am  Makefile.in  resource.rc
