
EXTRA_DIST = about.xpm charset.xpm column.xpm composer.xpm connect.xpm \
	create_new.xpm db.xpm disconnect.xpm dumpshp.xpm exif.xpm \
	exit.xpm foreign_key.xpm geometry.xpm geotable.xpm geoview.xpm \
	geovtable.xpm help.xpm hs_back_no.xpm hs_back.xpm hs_forward_no.xpm \
	hs_forward.xpm icon_info.xpm icon.xpm index.xpm kill_spindex.xpm \
	loaddbf.xpm loadshp.xpm loadtxt.xpm loadxl.xpm malformed_geoms.xpm \
	map_preview.xpm mbrcache.xpm memdb_clock.xpm memdb_load.xpm \
	memdb_new.xpm memdb_save.xpm network.xpm pkey.xpm primary_key.xpm \
	refresh.xpm rs_first.xpm rs_last.xpm rs_next.xpm rs_previous.xpm \
	spatialidx.xpm sql_abort_no.xpm sql_abort.xpm sql_go.xpm \
	sql_script.xpm srids.xpm statistics.xpm tables.xpm table.xpm \
	topology.xpm tmp_table.xpm tmp_view.xpm trigger.xpm vacuum.xpm \
	view.xpm virtdbf.xpm virtshp.xpm virttxt.xpm virtxl.xpm vtable.xpm \
	attach.xpm sql_log.xpm db_status.xpm loadxml.xpm checkgeom.xpm \
	sanegeom.xpm wfs.xpm dxf.xpm
